# crypto-ecosystems

./: .all-contributorsrc  .gitignore  20250930-add-bridges.migration  617F-E7BF  Add Berachain ecosystem  CONTRIBUTING.md  Cargo.toml  Crpt  Here is a simple cairo code  I wrote a cairo code  Improved StarkNet Security: Meme Coin Smart Contract.  Iterative Fibonacci Calculation in Cairo.  LICENSE  LICENSE-CC-BY.md  LICENSE-MIT.md  LICENSE.md  Luvcelo.toml  Makefile  Nervos-network.toml  README.md  Repository Cleanup Action Plan  SECURITY.md  Simple Counter in Cairo.  Simple Meme Coin Smart Contract for StarkNet.  Simple StarkNet contract for deposit and withdrawal.  This is a simplified example of a Cairo program for transactions in a zk-rollup system.  arbitrum.md  avalanche.md  azure-pipelines.yml  bitcoin.md  blame_output.csv  blame_output_sorted.txt  build.zig  calculator in cairo  cardano.md  celo.toml  chainlink.md  commit.txt  cosmos.md  cpt tst.txt  (+23 more)
analysis/: repo_example.py  repo_overview.py
analytics/: dune.md  nansen.md
api/: README.md  app.py  requirements.txt
bridges/: wormhole.md
dao/: aragon.md  daohaus.md  ens.md  snapshot.md
data/: BEAM  ecoskusama.toml  kaspa.toml
defi/: balancer.md  bancor.md  curve.md  maker.md
defi-protocols/: aave.md  uniswap.md
derivatives/: perpetual.md  synthetix.md
dex-aggregators/: 1inch.md  cowswap.md
gaming/: axie.md  decentraland.md  gala.md  sandbox.md
infrastructure/: infura.md
layer2/: optimism.md  starknet.md
lending/: compound.md  euler.md
market-data/: bitcoin-price.md
migration/: 20250930-add-identity-socialfi.migration
migrations/: 2009-01-31T235959_mutations  2010-05-31T235959_mutations  2010-07-31T235959_mutations  2010-09-30T235959_mutations  2010-10-31T235959_mutations  2010-12-31T235959_mutations  2011-03-31T235959_mutations  2011-05-31T235959_mutations  2011-06-30T235959_mutations  2011-07-31T235959_mutations  2011-09-30T235959_mutations  2011-11-30T235959_mutations  2011-12-31T235959_mutations  2012-01-31T235959_mutations  2012-02-29T235959_mutations  2012-03-31T235959_mutations  2012-04-30T235959_mutations  2012-05-31T235959_mutations  2012-06-30T235959_mutations  2012-07-31T235959_mutations  2012-08-31T235959_mutations  2012-09-30T235959_mutations  2012-10-31T235959_mutations  2012-11-30T235959_mutations  2013-01-31T235959_mutations  2013-02-28T235959_mutations  2013-03-31T235959_mutations  2013-04-30T235959_mutations  2013-05-31T235959_mutations  2013-06-30T235959_mutations  2013-07-31T235959_mutations  2013-08-31T235959_mutations  2013-09-30T235959_mutations  2013-10-31T235959_mutations  2013-11-30T235959_mutations  2013-12-31T235959_mutations  2014-01-31T235959_mutations  2014-02-28T235959_mutations  2014-03-31T235959_mutations  2014-04-30T235959_mutations  (+596 more)
nft/: opensea.md
oracles/: pyth.md  uma.md
privacy/: monero.md  zcash.md
python/: README.md  main.py  taxonomy.py
specs/: python-port-spec.md
src/: __init__.py  __main__.py  cairo_contribution.cairo  (+11 more)
(+8447 files in other folders)
