[package]
name = "crypto-ecosystems"
version = "0.2.0"
authors = ["Curtis Spencer"]
edition = "2021"

[dependencies]
anyhow = "1.0"
glob = "0.3.1"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
structopt = "0.3.26"
thiserror = "1.0.40"
toml = "0.7.3"

[profile.dev]
opt-level = 3
debug = 1
