[project]
name = "open-dev-data"
version = "1.0"
description = "A taxonomy of crypto and decentralized web ecosystems and repositories"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
open-dev-data = "src.open_dev_data.commands:main"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
pythonpath = "."
